--- a/HGC/HGC_clustering_pbmc3k.ipynb
+++ b/HGC/HGC_clustering_pbmc3k.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTfXHDWC66u6FGcwI4QqfT",
+      "authorship_tag": "ABX9TyN5uaMZb4bEL0Vx6SWXtfSd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -673,11 +673,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "qsave(pbmc,\"~/Colab_Notebooks/[02] R/[02] clustering/[01] hierarchical clustering/[01] HGC  fast hierarchical clustering for large-scale single-cell data/pbmc_clustered.qs\")"
+      ],
       "metadata": {
         "id": "CJiO0pqT9wVy"
       },
-      "execution_count": 32,
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "qsave(pbmc.tree,\"~/Colab_Notebooks/[02] R/[02] clustering/[01] hierarchical clustering/[01] HGC  fast hierarchical clustering for large-scale single-cell data/pbmc_tree.qs\")"
+      ],
+      "metadata": {
+        "id": "mdJmd0nvoiQX"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "mamba env export > HGC_conda_env.yml\n",
+        "\n",
+        "installed_packages <- installed.packages()[,c(\"Package\",\"Version\")]\n",
+        "write.csv(installed_packages, \"HGC_r_package_versions.csv\",row.names = F)\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5nfjwj27p57E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "P6Dg1Diut8MX"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
