--- a/HGC/02_HGC_compare_with_tutorial.ipynb
+++ b/HGC/02_HGC_compare_with_tutorial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOH8R75IGQLdSxXfqfXTsbI",
+      "authorship_tag": "ABX9TyOLats7LqjCB98Gs/QGxWIU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,9 +60,9 @@
         "    r-mclustcomp \\\n",
         "    r-fossil \\\n",
         "    r-aricode \\\n",
-        "    r-venndiagram \\\n",
-        "    r-upsetr\n",
+        "    r-venndiagram\n",
         "\n",
+        "install.packages(\"ggview\")\n",
         "```"
       ],
       "metadata": {
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 68,
       "metadata": {
         "id": "MLuD6VqEw7wU"
       },
@@ -89,7 +89,8 @@
         "library(fossil)\n",
         "library(aricode)\n",
         "library(VennDiagram)\n",
-        "library(UpSetR)"
+        "library(UpSetR)\n",
+        "library(ggview)"
       ]
     },
     {
@@ -970,6 +971,88 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "sankey_plot + canvas(800,1000,unit = \"px\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dvEVrLk5Jfn2",
+        "outputId": "91046f57-f4a1-45e8-fff6-1835e9ada657"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Warning message in to_lodes_form(data = data, axes = axis_ind, discern = params$discern):\n",
+            "“Some strata appear at multiple axes.”\n",
+            "Warning message in to_lodes_form(data = data, axes = axis_ind, discern = params$discern):\n",
+            "“Some strata appear at multiple axes.”\n",
+            "Warning message in to_lodes_form(data = data, axes = axis_ind, discern = params$discern):\n",
+            "“Some strata appear at multiple axes.”\n",
+            "ERROR while rich displaying an object: Error: RStudio not running\n",
+            "\n",
+            "Traceback:\n",
+            "1. sapply(x, f, simplify = simplify)\n",
+            "2. lapply(X = X, FUN = FUN, ...)\n",
+            "3. FUN(X[[i]], ...)\n",
+            "4. tryCatch(withCallingHandlers({\n",
+            " .     if (!mime %in% names(repr::mime2repr)) \n",
+            " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
+            " .     rpr <- repr::mime2repr[[mime]](obj)\n",
+            " .     if (is.null(rpr)) \n",
+            " .         return(NULL)\n",
+            " .     prepare_content(is.raw(rpr), rpr)\n",
+            " . }, error = error_handler), error = outer_handler)\n",
+            "5. tryCatchList(expr, classes, parentenv, handlers)\n",
+            "6. tryCatchOne(expr, names, parentenv, handlers[[1L]])\n",
+            "7. doTryCatch(return(expr), name, parentenv, handler)\n",
+            "8. withCallingHandlers({\n",
+            " .     if (!mime %in% names(repr::mime2repr)) \n",
+            " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
+            " .     rpr <- repr::mime2repr[[mime]](obj)\n",
+            " .     if (is.null(rpr)) \n",
+            " .         return(NULL)\n",
+            " .     prepare_content(is.raw(rpr), rpr)\n",
+            " . }, error = error_handler)\n",
+            "9. repr::mime2repr[[mime]](obj)\n",
+            "10. repr_text.default(obj)\n",
+            "11. paste(capture.output(print(obj)), collapse = \"\\n\")\n",
+            "12. capture.output(print(obj))\n",
+            "13. withVisible(...elt(i))\n",
+            "14. print(obj)\n",
+            "15. print.ggview(obj)\n",
+            "16. ggview(plot = x, width = x$canvas$width, height = x$canvas$height, \n",
+            "  .     units = x$canvas$units, dpi = x$canvas$dpi, scale = x$canvas$scale, \n",
+            "  .     bg = x$canvas$bg)\n",
+            "17. rstudioapi::viewer(path_html)\n",
+            "18. callFun(\"viewer\", url, height = height)\n",
+            "19. verifyAvailable()\n",
+            "20. stop(\"RStudio not running\", call. = FALSE)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "note: ggview depend on rstudio\n",
+        "\n",
+        "```\n",
+        "https://github.com/idmn/ggview\n",
+        "VS Code\n",
+        "The package relies on the rstudioapi::viewer() function to display plot previews. By default it does not work in VS Code, but installing the R extension fixes it. It tricks the rstudioapi package into believing it is running in RStudio, and everything works.\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "ZiXICrVJJ28E"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## venn plot"
@@ -1365,6 +1448,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "qsave(pbmc,\"~/Colab_Notebooks/[02] R/[02] clustering/[01] hierarchical clustering/[01] HGC  fast hierarchical clustering for large-scale single-cell data/pbmc_tutorial.qs\")"
+      ],
+      "metadata": {
+        "id": "WzNwl3RuJSWu"
+      },
+      "execution_count": 69,
+      "outputs": []
     }
   ]
 }
